fix:Basic Issues like removed x overflow, black bg of text,added glass effect.

--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
+ 
 }
 
-
+html{ overflow-x: hidden;}
 :root {
-  --dark-bg: rgba(15, 15, 15, 0.95);
-  --spacing: 350px;
+  --dark-bg: inherit;
+  /* --dark-bg: rgba(15, 15, 15, 0.95); */
+  --spacing: 10px;
 
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
@@ -56,9 +58,11 @@ canvas {
     grid-column: 2 / 8;
     padding: 1rem;
     background: var(--dark-bg);
+    backdrop-filter: blur(2px);
     font-size: 1.25rem;
     line-height: 1.5;
     margin-bottom: var(--spacing);
+    max-width: fit-content;
   }
 
   blockquote {
